bloembraaden/client/admin.css
/*
 * admin page specific styles
 */
#PEATCMS_admin_page :focus {
    outline: 0;
}

#PEATCMS_admin_page img {
    display: block;
    line-height: 0;
    border: 0;
}

#PEATCMS_admin_page em {
    font-style: italic;
}

#PEATCMS_admin_page strong {
    font-weight: 700;
}

#PEATCMS_admin_page {
    background-color: #fff;
    background-image: none;
    min-height: 100vh;
    padding: 1rem;
    width: auto;
}

#PEATCMS_admin_page .toggle {
    height: 2rem;
    overflow: hidden; /* open / close handled by button.toggle */
    transition: height .4s;
}

#PEATCMS_admin_page .toggle.open {
    height: auto;
    margin-bottom: .5rem;
}

#PEATCMS_admin_page .toggle header {
    height: 2rem;
}

#PEATCMS_admin_page .toggle header * {
    text-decoration: none;
    font-weight: normal;
    margin-right: .2rem;
}

#PEATCMS_admin_page .toggle .toggle_button:after {
    content: '\25B6';
    font-weight: bold;
    display: inline-block;
}

#PEATCMS_admin_page .toggle.open > header > .toggle_button:after {
    transform: rotateZ(90deg);
}

#PEATCMS_admin_page .toggle .toggle {
    margin-left: 1.6em; /* indent for a bit */
}

.PEATCMS_admin .info,
#PEATCMS_admin_page .info {
    opacity: .8;
}

/**
 * reset some stuff that might be changed by a client css
 */
#admin_wrapper *,
#admin_console *,
#admin_sidebar .edit-area * {
    font-family: 'Arial', sans-serif;
    font-size: 15px;
    line-height: 1.5em;
    letter-spacing: 0;
}

.edit-area * {
    color: rgb(44, 44, 52);
}

#admin_console_button {
    vertical-align: text-top;
}

#PEATCMS_admin_page section {
    width: 100%;
    max-width: 100%;
    margin: auto;
}

/**
 * generic
 */
[data-done="true"] {
    color: rgb(0, 180, 20) !important;
}

[data-done="false"] {
    color: rgb(200, 0, 0) !important;
}

.PEATCMS_admin [data-disabled="1"] {
    display: none !important;
}

#PEATCMS_admin_page #PEATCMS_edit_menu {
    display: none;
}

#PEATCMS_admin_page .page_content label {
    display: inline-block;
    max-width: 160px;
    width: 20vw;
}

#PEATCMS_admin_page :not(.edit-area) > input[type=password],
#PEATCMS_admin_page :not(.edit-area) > input[type=email],
#PEATCMS_admin_page :not(.edit-area) > input[type=text]:not(.searchable) {
    background-color: inherit;
    font-size: inherit;
    min-width: 160px;
    width: 50vw;
    border: 0;
    border-bottom: solid 1px #333;
}

#PEATCMS_admin_page input[type=button]:hover {
    color: rgb(48, 63, 123);
}

/**
 * publish button and functionality
 */
#peatcms_publish {
    margin: .25rem .5rem;
    padding: .25rem;
    background-color: rgb(48, 63, 123);
    border-radius: .25rem;
    position: absolute;
    top: 2.08rem;
    right: 0;
}

#peatcms_publish:after {
    content: 'publish';
    font-weight: bold;
    color: #fff;
}

#peatcms_publish.published {
    background-color: #f0f0f0;
}

.template.published:after,
#peatcms_publish.published:before {
    content: '\2713';
    color: rgb(0, 180, 20);
    font-weight: bold;
    margin-left: .2em;
}

#peatcms_publish.published:after {
    content: 'published';
    font-weight: normal;
    color: #999;
}

.template {
    display: table-row;
}

.template > *:first-child {
    text-transform: capitalize;
}

.template > * {
    padding-right: .5rem;
    color: #444;
    display: table-cell;
}

/**
 * Template editor is a special case :-)
 */
#PEATCMS_admin_page.template {
    overflow: hidden;
}

#PEATCMS_admin_page.template,
#PEATCMS_admin_page.template > * {
    margin: 0;
    padding: 0;
}

#PEATCMS_admin_page.template header.bar {
    height: 4rem;
    padding: .25rem 1rem;
}

#PEATCMS_admin_page.template header.bar > * {
    display: inline-block !important;
}

#PEATCMS_admin_page.template textarea {
    font-family: Consolas, "Courier New", Courier, sans-serif;
    display: block;
    width: calc(100vw - 17px);
    height: calc(100vh - 4.5rem - 17px);
    overflow: scroll;
    border-bottom: 0;
}

/**
 * PEATCMS_admin styles...
 */
.PEATCMS_admin img {
    display: block;
    line-height: 0;
    border: 0;
}

.PEATCMS_admin em {
    font-style: italic;
}

.PEATCMS_admin header,
.PEATCMS_admin strong {
    font-weight: bold;
}


/**
 * Menu editor
 */

/* menu_item */
#PEATCMS_admin_menu_editor,
#PEATCMS_admin_menu_finder {
    float: left;
    width: 45vw;
    padding: 30px 0 0 .5em;
}

#PEATCMS_admin_menu_finder input.searchable {
    position: absolute;
    margin-top: -30px;
    max-width: 45vw;
}

/*#PEATCMS_admin_menu_editor .toggle,
.PEATCMS_admin.menu_editor ul li*/
.menu_editor ul li {
    background-color: #fff;
    box-shadow: 0 2px 4px #f0f0f0;
    padding: 0 6px;
    margin: 0 0 3px 0;
    border: 1px solid #f0f0f0;
    list-style-type: none;
    border-top: 2px solid transparent;
}

#PEATCMS_admin_page.menu_editor ul li div.drop_area {
    height: 10px;
    background-color: #ccc;
    margin-left: 3%;
    width: 97%;
}

/* items that already have children don't need the child-drop_area! */
#PEATCMS_admin_page.menu_editor ul li ul + div.drop_area {
    display: none;
}

#PEATCMS_admin_page.menu_editor ul li button {
    float: right;
}

/* toggle area that allows to add the first menu item or delete / remove them */
#PEATCMS_admin_menu_editor .toggle {
    max-height: 40px;
    margin-top: 1em;
    background-color: #fff;
}

#PEATCMS_admin_menu_editor .toggle.dragover {
    border-color: rgb(48, 63, 123);
}

/**
 * Console
 */
.offline {
    border-left: solid .2em rgba(0, 0, 0, .1);
}

.PEATCMS_admin .offline {
    display: inherit;
    /*    outline: dotted 2px #f00;*/
}


.PEATCMS_admin .online {
    border-left: solid .2em rgb(48, 63, 123);
}

.PEATCMS_admin .button.edit,
.PEATCMS_admin button.edit {
    margin: 0 .2em;
}

.PEATCMS_admin .button.edit:hover,
.PEATCMS_admin button.edit:hover {
    color: rgb(48, 63, 123);
}

.peatcms-link,
.PEATCMS_admin a,
.PEATCMS_admin a:active,
.PEATCMS_admin a:visited,
.PEATCMS_admin .link {
    color: rgb(48, 63, 123);
    text-decoration: underline;
    cursor: pointer;
}
/* ... */

